follows lesson + debug last step

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <script type="text/javascript" src="scripts.js"></script>
     <title>redux karaoke</title>
   </head>
-  <body style='height:100vh' onClick='userClick()'>
+  <body style='height:100vh' >
     <h1>Redux Karaoke!</h1>
     <hr>
-    <div id="lyrics">
-
+    <h2>Select a Song:</h2>
+    <ul id="songs">
+    </ul>
     </div>
+    <hr>
+    <h2>Then sing along:</h2>
+    <em>
+      <div id="lyrics" onClick='userClick()'>
+      </div>
+    </em>
   </body>
+
 </html>
